// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`image without options 2 images 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      src=\\"test1-350.png\\"
      width=\\"350\\"
      srcset=\\"test1-320.png 320w, test1-350.png 350w\\"
      sizes=\\"100vw\\"
      data-pristine=\\"test1.png\\"
    /><img
      src=\\"test2-400.png\\"
      width=\\"400\\"
      srcset=\\"test2-320.png 320w, test2-400.png 400w\\"
      sizes=\\"100vw\\"
      data-pristine=\\"test2.png\\"
    />
  </body>
</html>
"
`;

exports[`image without options simple image 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      src=\\"test-640.png\\"
      srcset=\\"
        test-320.png   320w,
        test-560.png   560w,
        test-800.png   800w,
        test-1040.png 1040w,
        test-1280.png 1280w
      \\"
      sizes=\\"100vw\\"
      data-pristine=\\"test.png\\"
    />
  </body>
</html>
"
`;

exports[`image without options width attribute inferior to the fallback 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      src=\\"test-543.png\\"
      width=\\"543\\"
      srcset=\\"test-320.png 320w, test-543.png 543w\\"
      sizes=\\"100vw\\"
      data-pristine=\\"test.png\\"
    />
  </body>
</html>
"
`;

exports[`image without options width attribute inferior to the minWidth 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      src=\\"test-200.png\\"
      width=\\"200\\"
      srcset=\\"test-200.png 200w\\"
      sizes=\\"100vw\\"
      data-pristine=\\"test.png\\"
    />
  </body>
</html>
"
`;

exports[`image without options width attribute superior to the fallback 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      src=\\"test-640.png\\"
      width=\\"789\\"
      srcset=\\"test-320.png 320w, test-560.png 560w, test-789.png 789w\\"
      sizes=\\"100vw\\"
      data-pristine=\\"test.png\\"
    />
  </body>
</html>
"
`;
